--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,66 +11,9 @@
     {% endfor %}
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Homegate Inn</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="oi oi-menu"></span> Menu
-          </button>
-    
-          <div class="collapse navbar-collapse" id="ftco-nav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-              <li class="nav-item"><a href="rooms.html" class="nav-link">Rooms</a></li>
-              <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-              <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      {{ content }}
-    <footer>
-        <footer class="footer">
-            <div class="container">
-              <div class="row mb-5">
-                <div class="col-md-6 col-lg-4">
-                  <h3 class="heading-section">About Us</h3>
-                  <p class="mb-5">Homegate Inn is located in mid-Mississippi, on Highway 25 North, in the town of Louisville. Experience peace and serenity during your stay with us, while being only minutes away from groceries and gas, and only 30 minutes to Starkville, MS.</p>
-                  <p><a href="#" class="btn btn-primary px-4">Call Now</a></p>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                  <h3 class="heading-section">Family owned and operated</h3>
-                  <div class="block-21 d-flex mb-4">
-                     <img src="/assets/images/owners.jpg" class = "img-responsive" width = "80%">
-                  </div>
-        
-                </div>
-                <div class="col-md-6 col-lg-4">
-                  <div class="block-23">
-                    <h3 class="heading-section">Contact Info</h3>
-                      <ul>
-                        <li><span class="icon icon-users"></span><span class="text">Managers: Kim and Jay</span></li> 
-                        <li><span class="icon icon-map-marker"></span><span class="text">2565 Metts St. Louisville, MS 39339</span></li>
-                        <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1 (662) 773 4005</span></a></li>
-                      </ul>
-                    </div>
-                </div>
-                
-                
-              </div>
-              <div class="row pt-5">
-                <div class="col-md-12 text-left">
-                  <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                  </p>
-                </div>
-              </div>
-            </div>
-          </footer>
-    </footer>
-      <!-- loader -->
+    {% include navigation.html %}
+    {{ content }}
+    {% include footer.html %} 
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
