--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title> {{ page.title }}</title>
+    <link rel="shortcut icon" type="image/jpg" href="/assets/images/favicon.ico"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
