--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
             <div class="col-md-6 col-lg-4">
               <h3 class="heading-section">About Us</h3>
               <p class="mb-5">Homegate Inn is located in mid-Mississippi, on Highway 25 North, in the town of Louisville. Experience peace and serenity during your stay with us, while being only minutes away from groceries and gas, and only 30 minutes to Starkville, MS.</p>
-              <p><a href="#" class="btn btn-primary px-4">Call Now</a></p>
+              <p><a href="tel:6627734005" class="btn btn-primary px-4">Call Now</a></p>
             </div>
             <div class="col-md-6 col-lg-4">
               <h3 class="heading-section">Family owned and operated</h3>
@@ -19,8 +19,8 @@
                 <h3 class="heading-section">Contact Info</h3>
                   <ul>
                     <li><span class="icon icon-users"></span><span class="text">Managers: Kim and Jay</span></li> 
-                    <li><span class="icon icon-map-marker"></span><span class="text">2565 Metts St. Louisville, MS 39339</span></li>
-                    <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1 (662) 773 4005</span></a></li>
+                    <li><a href="http://maps.google.com/?q=HomeGate Inn Louisville, Metts Street, Louisville, MS" target="_blank"><span class="icon icon-map-marker"></span><span class="text">2565 Metts St. Louisville, MS 39339</span></a></li>
+                    <li><a href="tel:6627734005"><span class="icon icon-phone"></span><span class="text">+1 (662) 773 4005</span></a></li>
                   </ul>
                 </div>
             </div>
