--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
           <div class="row mb-5">
             <div class="col-md-6 col-lg-4">
               <h3 class="heading-section">About Us</h3>
-              <p class="mb-5">Homegate Inn is located in mid-Mississippi, on Highway 25 North, in the town of Louisville. Experience peace and serenity during your stay with us, while being only minutes away from groceries and gas, and only 30 minutes to Starkville, MS.</p>
+              <p class="mb-5">Homegate Inn is located in East Central Mississippi, on Highway 25 North, in the town of Louisville. Experience peace and serenity during your stay with us, while being only minutes away from groceries and gas, and only 30 minutes to Starkville, MS.</p>
               <p><a href="tel:6627734005" class="btn btn-primary px-4">Call Now</a></p>
             </div>
             <div class="col-md-6 col-lg-4">
