--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,14 +4,14 @@
           <div class="row mb-5">
             <div class="col-md-6 col-lg-4">
               <h3 class="heading-section">About Us</h3>
-              <p class="mb-5">Homegate Inn is located in East Central Mississippi, on Highway 25 North, in the town of Louisville. Experience peace and serenity during your stay with us, while being only minutes away from groceries and gas, and only 30 minutes to Starkville, MS.</p>
+              <p class="mb-5">Homegate Inn is located in East Central Mississippi, on Highway 25 North, in the town of Louisville. Experience peace and serenity during your stay with us, while being only minutes away from groceries, food, and gas, and only 25 minutes to Starkville, MS.</p>
               <p><a href="tel:6627734005" class="btn btn-primary px-4">Call Now</a></p>
             </div>
             <div class="col-md-6 col-lg-4">
               <h3 class="heading-section">Family owned and operated</h3>
               <div class="block-21 d-flex mb-4">
-                 <img src="/assets/images/owners.jpg" class = "img-responsive" width = "80%">
-              </div>
+
+                <p><a href="rooms" class="btn px-4 btn-primary"> See our rooms</a></p>              </div>
     
             </div>
             <div class="col-md-6 col-lg-4">
