--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Homegate Inn</a>
+        <a class="navbar-brand" href="index">Homegate Inn</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
         </button>
 
         <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item {% if page.url == "/" %} active {% endif%}"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item {% if page.url == "/rooms.html" %} active {% endif%}"><a href="rooms.html" class="nav-link">Rooms</a></li>
-            <li class="nav-item {% if page.url == "/about.html" %} active {% endif%}"><a href="about.html" class="nav-link">About Us</a></li>
+            <li class="nav-item {% if page.url == "/" %} active {% endif%}"><a href="index" class="nav-link">Home</a></li>
+            <li class="nav-item {% if page.url == "/rooms" %} active {% endif%}"><a href="rooms" class="nav-link">Rooms</a></li>
+            <li class="nav-item {% if page.url == "/about" %} active {% endif%}"><a href="about" class="nav-link">About Us</a></li>
         </ul>
         </div>
     </div>
