--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-31B2J8WM7E"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-31B2J8WM7E');
+    </script>
     <title> {{ page.title }}</title>
     <link rel="shortcut icon" type="image/jpg" href="/assets/images/favicon.ico"/>
     <meta charset="utf-8">
