Change all assets to https://

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
                 <h3 class="heading-section">Contact Info</h3>
                   <ul>
                     <li><span class="icon icon-users"></span><span class="text">Managers: Kim and Jay</span></li> 
-                    <li><a href="http://maps.google.com/?q=HomeGate Inn Louisville, Metts Street, Louisville, MS" target="_blank"><span class="icon icon-map-marker"></span><span class="text">2565 Metts St. Louisville, MS 39339</span></a></li>
+                    <li><a href="https://maps.google.com/?q=HomeGate Inn Louisville, Metts Street, Louisville, MS" target="_blank"><span class="icon icon-map-marker"></span><span class="text">2565 Metts St. Louisville, MS 39339</span></a></li>
                     <li><a href="tel:6627734005"><span class="icon icon-phone"></span><span class="text">+1 (662) 773 4005</span></a></li>
                   </ul>
                 </div>
