Add meta properties for facebook

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,13 @@
       gtag('config', 'G-31B2J8WM7E');
     </script>
     <title> {{ page.title }}</title>
+     
+    <!-- for thumbnails on fb -->
+    <meta property="og:title" content="Homegate Inn" />
+    <meta property="og:url" content="https://www.homegateinn.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/assets/images/sign.JPEG" />
+
     <link rel="shortcut icon" type="image/jpg" href="/assets/images/favicon.ico"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
